project(BlobTools)
cmake_minimum_required(VERSION 2.6)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/lib)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/shared" "${CMAKE_SOURCE_DIR}/src")
SET(SHARED_SOURCES shared/blob.h)
SET(BLOBUNPACK_SOURCES src/blobunpack.cpp ${SHARED_SOURCES})
SET(BLOBPACK_SOURCES src/blobpack.cpp ${SHARED_SOURCES})


ADD_EXECUTABLE(blobunpack ${BLOBUNPACK_SOURCES})
ADD_EXECUTABLE(blobpack ${BLOBPACK_SOURCES})


